--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الدعاء للطفل يوسف محمد</title>
+    <title>الدعاء للطفل يوسف عبد الملك</title>
 
     <style>
         body {
@@ -63,7 +63,7 @@
 
     <div class="container">
         <h1>انا لله و انا اليه راجعون</h1>
-        <div class="name">اللهم ارحم الطفل يوسف محمد</div>
+        <div class="name">اللهم ارحم الطفل يوسف عبد الملك</div>
 
         <!-- أدعية مطوّلة للطفل -->
         <div class="dua">
@@ -174,3 +174,4 @@
 
 </body>
 </html>
+
